--- a/packages/@sanity/mutator/package.json
+++ b/packages/@sanity/mutator/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "clean": "rimraf lib",
     "test": "tap test/*.test.js --node-arg --require --node-arg @babel/register",
-    "perf": "node --require ./.babel-init.js ./perf/run.js",
-    "typecheck": "flow check"
+    "perf": "node --require ./.babel-init.js ./perf/run.js"
   },
   "keywords": [
     "sanity",
@@ -25,7 +24,6 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "@babel/preset-flow": "^7.0.0",
     "rimraf": "^2.6.2",
     "tap": "^14.6.1"
   },
