--- a/packages/@sanity/preview/package.json
+++ b/packages/@sanity/preview/package.json
@@ -8,8 +8,7 @@
     "compile": "babel src --copy-files --out-dir lib",
     "compile:watch": "npm run compile -- --watch",
     "test": "#todo: jest",
-    "test:watch": "jest --watchAll",
-    "typecheck": "flow check"
+    "test:watch": "jest --watchAll"
   },
   "keywords": [
     "sanity",
@@ -34,7 +33,6 @@
   },
   "devDependencies": {
     "empty": "^0.10.1",
-    "flow-typed": "^2.2.3",
     "jest": "^24.9.0"
   },
   "publishConfig": {
