--- a/packages/@sanity/state-router/package.json
+++ b/packages/@sanity/state-router/package.json
@@ -12,8 +12,7 @@
     "compile": "npm run clean && babel --out-dir lib/ src/",
     "compile:watch": "babel --watch --out-dir lib/ src/",
     "benchmark": "npm run compile && node --prof --logfile=benchmarks.log perf/benchmark.js",
-    "clean": "rimraf lib",
-    "typecheck": "flow check"
+    "clean": "rimraf lib"
   },
   "keywords": [
     "sanity",
