[chore] Add TypeScript specific eslint config

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "deploy-test": "npm run build && cd packages/test-studio && sanity deploy",
     "deploy-movies": "npm run build && cd packages/movies-studio && sanity deploy",
     "storybook": "gulp storybook",
-    "lint": "eslint . --quiet",
+    "lint": "eslint . --ext=.js,.ts,.tsx --quiet",
     "lint:fix": "eslint . --quiet --fix",
     "typecheck": "lerna run typecheck",
     "start": "npm run test-studio",
@@ -45,7 +45,10 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.6.0",
     "@babel/register": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^2.2.0",
+    "@typescript-eslint/parser": "^2.2.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
