[schema] Migrate from Flow to TypeScript

--- a/packages/@sanity/schema/package.json
+++ b/packages/@sanity/schema/package.json
@@ -30,11 +30,13 @@
     "object-inspect": "^1.6.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.18",
     "@types/node": "^8.0.0",
     "empty": "^0.10.1",
     "jest": "^24.9.0",
     "recursive-readdir": "^2.1.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "ts-jest": "^24.0.2"
   },
   "bugs": {
     "url": "https://github.com/sanity-io/sanity/issues"
