--- a/packages/@sanity/mutator/package.json
+++ b/packages/@sanity/mutator/package.json
@@ -5,8 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "clean": "rimraf lib",
-    "test": "tap test/*.test.js --node-arg --require --node-arg @babel/register",
-    "perf": "node --require ./.babel-init.js ./perf/run.js"
+    "test": "tap test/*.test.ts",
+    "perf": "node ./perf/run.js"
   },
   "keywords": [
     "sanity",
