--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "stylelint-config-standard": "^18.0.0",
     "through2": "^3.0.1",
     "typescript": "^3.6.2",
+    "typescript-plugin-css-modules": "^1.2.1",
     "yarn": "^1.3.2"
   },
   "husky": {
